--- a/tex/main.bib
+++ b/tex/main.bib
@@ -191,6 +191,11 @@
 	key             = {Rustonomicon},
 }
 
+@misc{tor,
+	title = {Rust in {T}or},
+	url = {https://trac.torproject.org/projects/tor/wiki/RustInTor},
+}
+
 @misc{rust:unstable,
 	title         = {The {R}ust Unstable Book},
 	year          = {2020},
