--- a/tex/paper/main.bib
+++ b/tex/paper/main.bib
@@ -29,6 +29,17 @@
   	publisher={Elsevier}
 }
 
+@article{security:saltzer,
+  title={The protection of information in computer systems},
+  author={Saltzer, Jerome H and Schroeder, Michael D},
+  journal={Proceedings of the IEEE},
+  volume={63},
+  number={9},
+  pages={1278--1308},
+  year={1975},
+  publisher={IEEE}
+}
+
 @article{security_framework,
 	author 	= {Khwaja, Amir and Murtaza, Muniba and Ahmad, Hafiz},
 	year 	= {2019},
@@ -92,12 +103,26 @@
 	year            = {2003},
 }
 
+@inproceedings{krust,
+  title={Krust: A formal executable semantics of rust},
+  author={Wang, Feng and Song, Fu and Zhang, Min and Zhu, Xiaoran and Zhang, Jun},
+  booktitle={2018 International Symposium on Theoretical Aspects of Software Engineering (TASE)},
+  pages={44--51},
+  year={2018},
+  organization={IEEE}
+}
+
 @misc{cencia:dispense,
 	author          = {Pietro Cenciarelli},
 	title           = {Dispense del corso Linguaggi di Programmazione},
 	year            = {2019},
 	url             = {http://wwwusers.di.uniroma1.it/~lpara/DISPENSE/note.pdf},
 	key             = {Dispense del corso},
+}
+
+@misc{cve:rust,
+	title 	= {{R}ust vulnerability statistics},
+	url		= {https://www.cvedetails.com/product/48677/Rust-lang-Rust.html?vendor_id=19029},
 }
 
 @misc{freeBSD_vulnerability,
